--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?3ot2jt');
-  src:  url('fonts/icomoon.eot?3ot2jt#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?3ot2jt') format('truetype'),
-    url('fonts/icomoon.woff?3ot2jt') format('woff'),
-    url('fonts/icomoon.svg?3ot2jt#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?lkfkos');
+  src:  url('fonts/icomoon.eot?lkfkos#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?lkfkos') format('truetype'),
+    url('fonts/icomoon.woff?lkfkos') format('woff'),
+    url('fonts/icomoon.svg?lkfkos#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-menu:before {
-  content: "\e9bd";
+.icon-circle-right:before {
+  content: "\ea42";
+}
+.icon-circle-left:before {
+  content: "\ea44";
 }
