--- a/css/style.css
+++ b/css/style.css
@@ -266,7 +266,8 @@ body{
             display: block;
             position: absolute;
             z-index: 300;
-            top: 55%;
+            top: 50%;
+            margin-top: 160px;
             left: 50%;
             transform: translate(-50%, -50%);
             font-size: 60px;
